# EventSourcing

./: LICENSE  eventsourcing.cabal  stack.yaml
app/: Main.hs
src/: Aggregate.hs  Envelope.hs  EventStore.hs  InMemory.hs  InMemoryEventStore.hs  Person.hs  Store.hs
test/: Person.hs  Spec.hs  Types.hs
