name:                eventsourcing
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/johanrosell/EventSourcing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          johan.rosell@gmail.com
copyright:           2017 Johan Rosell
category:            EventSourcing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aggregate
                     , EventStore
                     , Envelope
                     , InMemory

  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , aeson
                     , datetime
                     , time
  default-language:    Haskell2010

test-suite eventsourcing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:             Person
  main-is:             Spec.hs
  build-depends:       base
                     , eventsourcing
                     , transformers
                     , aeson
                     , datetime
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johanrosell/EventSourcing
